here a joke i made up

--- a/hello_world.ipynb
+++ b/hello_world.ipynb
@@ -1,23 +1,35 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Class03: Hello World GitHub Assignment\n",
+    "\n",
+    "### Name: Rahul R Vemparala\n",
+    "\n",
+    "#### class : ISM6562.002S23"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world\n",
-      "Hi! I am Chitti, speed 1 THz, memory 1 ZB Dot!\n"
+      "Hello world!\n",
+      "I am Chitti, speed 1 THz, memory 1 ZB Dot!\n"
      ]
     }
    ],
    "source": [
-    "print(\"hello world\")\n",
+    "print(\"Hello world !\")\n",
     "\n",
-    "print(\"Hi! I am Chitti, speed 1 THz, memory 1 ZB Dot!\")"
+    "print(\"I am Chitti, speed 1 THz, memory 1 ZB Dot!\")"
    ]
   },
   {
