joke failed to land on GitHub previously :(

--- a/hello_world.ipynb
+++ b/hello_world.ipynb
@@ -14,22 +14,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello world!\n",
-      "I am Chitti, speed 1 THz, memory 1 ZB Dot!\n"
+      "It took me , 3 iterations to properly commit my changes to Github. Seems like I have commit-ment issues :)\n"
      ]
     }
    ],
    "source": [
-    "print(\"Hello world !\")\n",
     "\n",
-    "print(\"I am Chitti, speed 1 THz, memory 1 ZB Dot!\")"
+    "\n",
+    "print(\"It took me , 3 iterations to properly commit my changes to Github. Seems like I have commit-ment issues :)\")"
    ]
   },
   {
