Hello world is a mandatory for first file :)

--- a/hello_world.ipynb
+++ b/hello_world.ipynb
@@ -14,21 +14,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "It took me , 3 iterations to properly commit my changes to Github. Seems like I have commit-ment issues :)\n"
+      "Hello World\n"
      ]
     }
    ],
    "source": [
+    "print(\"Hello World\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "\n",
-    "print(\"It took me , 3 iterations to properly commit my changes to Github. Seems like I have commit-ment issues :)\")"
+    "### It took me , 3 iterations to properly commit my changes to Github.Seems like I have commit-ment issues :)"
    ]
   },
   {
